syntax = 'proto3';

package uploadPackage;

service Upload {
    rpc UploadFile (UploadRequest) returns (UploadResponse) {}
    rpc UploadFileWithStream (stream UploadLargeRequest) returns (UploadResponse) {}
}

message UploadRequest {
    string fileName = 1;
    bytes fileContent = 2;
}

message UploadLargeRequest {
    string fileName = 1;
    string fileContent = 2;
}

message UploadResponse {
    string message = 1;
}